<?xml version="1.0" encoding="utf-8"?>

<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
>
	<item
		android:id="@+id/filter"
		android:title="@string/filter"
		android:icon="@drawable/ic_filter"
		app:showAsAction="ifRoom"
	>
		<menu>
			<group android:id="@+id/filter_group" android:checkableBehavior="all">

			</group>
		</menu>
	</item>

	<item
		android:id="@+id/edit_garden"
		android:title="@string/menu_edit_garden"
		app:showAsAction="never"
		android:visible="false"
	/>

	<item
		android:id="@+id/export_garden"
		android:title="@string/menu_export_garden"
		app:showAsAction="never"
		android:visible="false"
	/>

	<item
		android:id="@+id/delete_garden"
		android:title="@string/menu_delete_garden"
		app:showAsAction="never"
		android:visible="false"
	/>
</menu>
