<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/coordinator"
>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
	>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<androidx.cardview.widget.CardView
				android:id="@+id/last_feeding"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="16dp"
				app:cardBackgroundColor="@color/light_blue"
				app:cardCornerRadius="4dp"
				app:cardElevation="2dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingLeft="12dp">

						<TextView
							android:id="@+id/last_feeding_date"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_alignParentTop="true"
							android:layout_alignParentRight="true"
							android:layout_centerVertical="true"
							android:layout_marginLeft="8dp"
							android:layout_marginTop="12dp"
							android:layout_marginEnd="12dp"
							android:fontFamily="sans-serif-light"
							android:textColor="?android:textColorSecondary"
							android:textSize="14sp" />

						<TextView
							android:id="@+id/last_feeding_name"
							style="@style/SubsectionTitle"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_alignParentTop="true"
							android:layout_centerVertical="true"
							android:layout_marginTop="12dp"
							android:layout_toLeftOf="@id/last_feeding_date"
							android:text="@string/last_watering_title" />

						<TextView
							android:id="@+id/last_feeding_full_date"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_below="@id/last_feeding_name"
							android:fontFamily="sans-serif-light"
							android:textColor="?android:textColorSecondary"
							android:textSize="14sp" />
					</RelativeLayout>

					<TextView
						android:id="@+id/last_feeding_summary"
						style="@style/SubsectionSubTitle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="12dp"
						android:layout_marginTop="8dp"
						android:layout_marginRight="12dp" />

					<Button
						android:id="@+id/duplicate_feeding"
						style="@style/Widget.MaterialComponents.Button.TextButton"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="end"
						android:layout_marginEnd="8dp"
						android:padding="16dp"
						android:text="@string/feed_again"
						android:textColor="?android:textColorPrimary" />
				</LinearLayout>
			</androidx.cardview.widget.CardView>

			<LinearLayout
				style="@style/PaperCard"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:elevation="4dp"
				android:orientation="vertical">

				<TextView
					style="@style/SectionTitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/plant_details_title" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					android:divider="?android:listDivider"
					android:orientation="vertical"
					android:showDividers="middle">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:paddingLeft="16dp"
						android:paddingTop="8dp"
						android:paddingRight="16dp"
						android:paddingBottom="16dp">

						<TextView
							style="@style/SubsectionTitle"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/plant_name_label" />

						<EditText
							android:id="@+id/plant_name"
							style="@style/SubsectionSubTitle"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/new_plant_hint"
							android:inputType="textCapWords"
							android:nextFocusDown="@+id/plant_strain"
							android:singleLine="true" />
					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:paddingLeft="16dp"
						android:paddingTop="16dp"
						android:paddingRight="16dp"
						android:paddingBottom="16dp">

						<TextView
							style="@style/SubsectionTitle"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/plant_strain_label" />

						<AutoCompleteTextView
							android:id="@+id/plant_strain"
							style="@style/SubsectionSubTitle"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/plant_strain_hint"
							android:inputType="textCapWords|textAutoComplete"
							android:nextFocusDown="@+id/plant_date"
							android:singleLine="true" />
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>

			<LinearLayout
				style="@style/PaperCard"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="12dp"
				android:elevation="4dp"
				android:orientation="vertical">

				<TextView
					style="@style/SectionTitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/stage_details_title" />

				<LinearLayout
					android:id="@+id/plant_stage_container"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:background="?selectableItemBackground"
					android:divider="?android:listDivider"
					android:orientation="vertical"
					android:showDividers="middle">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:padding="16dp">

						<TextView
							style="@style/SubsectionTitle"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/plant_stage_label" />

						<TextView
							android:id="@+id/plant_stage"
							style="@style/SubsectionSubTitle"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/germination" />
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>

			<LinearLayout
				style="@style/PaperCard"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="12dp"
				android:layout_marginBottom="24dp"
				android:elevation="4dp"
				android:orientation="vertical">

				<TextView
					style="@style/SectionTitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/grow_details_title" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:divider="?android:listDivider"
					android:orientation="vertical"
					android:showDividers="middle">

					<LinearLayout
						android:id="@+id/plant_date_container"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="?selectableItemBackground"
						android:orientation="vertical"
						android:padding="16dp">

						<TextView
							style="@style/SubsectionTitle"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/plant_date_label" />

						<TextView
							android:id="@+id/plant_date"
							style="@style/SubsectionSubTitle"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:nextFocusDown="@+id/plant_stage" />
					</LinearLayout>

					<LinearLayout
						android:id="@+id/plant_medium_container"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="?selectableItemBackground"
						android:orientation="vertical"
						android:padding="16dp">

						<TextView
							style="@style/SubsectionTitle"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/plant_medium_label" />

						<TextView
							android:id="@+id/plant_medium"
							style="@style/SubsectionSubTitle"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/plant_medium_hint" />
					</LinearLayout>

					<LinearLayout
						android:id="@+id/plant_medium_details_container"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:padding="16dp">

						<TextView
							style="@style/SubsectionTitle"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/medium_details_label" />

						<EditText
							android:id="@+id/plant_medium_details"
							style="@style/SubsectionSubTitle"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:gravity="top"
							android:hint="@string/medium_details_hint"
							android:lines="3" />
					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:paddingLeft="16dp"
						android:paddingTop="16dp"
						android:paddingRight="16dp"
						android:paddingBottom="8dp">

						<TextView
							style="@style/SubsectionTitle"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/from_clone_label" />

						<CheckBox
							android:id="@+id/from_clone"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginLeft="16dp"
							android:gravity="center"
							android:singleLine="true" />
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>


		</LinearLayout>
	</ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
