<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:id="@+id/card_view"
	android:layout_gravity="center"
	android:clickable="true"
	android:focusable="true"
	app:cardElevation="2dp"
	style="@style/Widget.MaterialComponents.CardView"
>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
	>
		<ImageView
			android:layout_width="match_parent"
			android:layout_height="192dp"
			android:id="@+id/image"
			android:layout_gravity="center"
			android:scaleType="centerCrop"
			android:adjustViewBounds="true"
			android:maxHeight="192dp"
		/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/summary_container"
			android:orientation="vertical"
			android:layout_gravity="center"
			android:padding="16dp"
		>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/name"
				android:text="@string/plant_name_label"
				android:textSize="24dp"
				android:textStyle="bold"
				android:textColor="?android:textColorPrimary"
			/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/summary"
				android:textColor="?android:textColorSecondary"
			/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingStart="12dp"
			android:paddingEnd="12dp"
			android:paddingBottom="8dp"
			android:layout_marginTop="8dp"
		>
			<com.google.android.material.button.MaterialButton
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:id="@+id/view_photos"
				android:text="@string/view_photos_short"
				style="@style/Widget.MaterialComponents.Button.TextButton"
			/>

			<com.google.android.material.button.MaterialButton
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:id="@+id/view_history"
				android:text="@string/view_history_short"
				style="@style/Widget.MaterialComponents.Button.TextButton"
			/>

			<com.google.android.material.button.MaterialButton
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:id="@+id/view_statistics"
				android:text="@string/view_statistics_short"
				style="@style/Widget.MaterialComponents.Button.TextButton"
			/>
		</LinearLayout>
	</LinearLayout>
</com.google.android.material.card.MaterialCardView>
