<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:clipToPadding="false"
	>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="88dp"
		>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:elevation="4dp"
				style="@style/PaperCard"
			>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/schedule_details_title"
					style="@style/SectionTitle"
				/>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:divider="?android:listDivider"
					android:showDividers="middle"
					android:layout_marginTop="16dp"
				>
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:paddingLeft="16dp"
						android:paddingRight="16dp"
						android:paddingTop="8dp"
						android:paddingBottom="16dp"
						android:divider="@drawable/vertical_full_divider"
						android:showDividers="middle"
					>
						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:orientation="vertical"
							android:layout_weight="1"
							android:weightSum="1"
						>
							<TextView
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@string/schedule_name"
								style="@style/SubsectionTitle"
							/>

							<EditText
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:id="@+id/title"
								android:hint="@string/schedule_name_hint"
								android:inputType="textCapWords"
								android:layout_gravity="bottom"
								android:nextFocusDown="@+id/description"
								style="@style/SubsectionSubTitle"
							/>
						</LinearLayout>
					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:paddingLeft="16dp"
						android:paddingRight="16dp"
						android:paddingTop="16dp"
						android:paddingBottom="16dp"
						android:divider="@drawable/vertical_full_divider"
						android:showDividers="middle"
					>
						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:orientation="vertical"
							android:layout_weight="1"
							android:weightSum="1"
						>
							<TextView
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@string/schedule_description"
								style="@style/SubsectionTitle"
							/>

							<EditText
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:id="@+id/description"
								android:hint="@string/schedule_description_hint"
								android:inputType="textCapWords"
								android:layout_gravity="bottom"
								style="@style/SubsectionSubTitle"
							/>
						</LinearLayout>
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_marginTop="8dp"
				android:elevation="4dp"
				style="@style/PaperCard"
			>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/schedules_title"
					style="@style/SectionTitle"
				/>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/schedules_container"
					android:orientation="vertical"
					android:divider="?android:listDivider"
					android:showDividers="middle"
					android:layout_marginTop="16dp"
				>
					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/new_schedule"
						android:text="@string/schedules_new_schedule"
						android:textStyle="bold"
						android:paddingLeft="16dp"
						android:paddingRight="16dp"
						android:paddingTop="18dp"
						android:paddingBottom="18dp"
						android:background="?attr/selectableItemBackground"
					/>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/fab_complete"
		app:backgroundTint="#4CAF50"
		app:srcCompat="@drawable/ic_floting_done"
		android:layout_gravity="bottom|end"
		android:layout_margin="16dp"
	/>
</FrameLayout>
